--- a/Snakes_n_Ladders.ipynb
+++ b/Snakes_n_Ladders.ipynb
@@ -118,6 +118,7 @@
     "    return players\n",
     "\n",
     "\n",
+    "\n",
     "def input_num_simul(): # REMOVE THIS\n",
     "    \"\"\"\n",
     "    () -> int\n",
@@ -161,9 +162,33 @@
     "\n",
     "### GAME SIMULATION STARTS HERE\n",
     "start = datetime.datetime.now()\n",
-    "print(\"Welcome to Snakes and Ladders.\\n\")\n",
     "# Create players\n",
-    "players = input_players()\n",
+    "players = {1: Player('Player 1'), 2: Player('Player 2'), 3: Player('Player 3'), 4: Player('Player 4')}\n",
+    "\n",
+    "\n",
+    "############ I need to rearrange everything:\n",
+    "\n",
+    "# results should be a dict like:\n",
+    "# results = {1: {100: results, 1000: results, 10000: results},\n",
+    "#            2: {100: results, 1000: results, 10000: results},\n",
+    "#            3: {100: results, 1000: results, 10000: results},\n",
+    "#            4: {100: results, 1000: results, 10000: results}}\n",
+    "# then I need a pd.DataFrame to plot and show stats\n",
+    "\n",
+    "# I need to run the code 100, 1000 and 10000 times for 1, 2, 3, and 4 players\n",
+    "    \n",
+    "# num_simul = [100, 1000, 10000]\n",
+    "# i = 0\n",
+    "\n",
+    "# for players in range(1, 5):\n",
+    "#     for n in range(num_simul[i]):\n",
+    "#         play_game(players[1]) --> modify play_game's parameter, let it be list instead of dict\n",
+    "#         results --> add results to results\n",
+    "#     i += 1 --> to move to the next item in num_simul... RETHINK THIS\n",
+    "\n",
+    "# after all this for loops (can I do a comprehension here? vectorization?), create a df with the results\n",
+    "    \n",
+    "    \n",
     "results = {}\n",
     "for player in players:\n",
     "    results[players[player].name] = []\n",
