--- a/Snakes_n_Ladders.ipynb
+++ b/Snakes_n_Ladders.ipynb
@@ -18,20 +18,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to Snakes and Ladders.\n",
-      "\n",
-      "Enter the number of players: 1\n",
-      "Enter a player's name: a\n",
-      "Enter number of simulations to run.\n",
-      "Min: 100, Max: as much as you want.   :100\n",
-      "\n",
-      "\n",
-      "a\n",
-      "Min:  9\n",
-      "Median:  38.0\n",
-      "Max:  231\n",
-      "*********\n",
-      "runtime:  10\n"
+      "[1]\n",
+      "[1, 2]\n",
+      "[1, 2, 3]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'pyip' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-66608152d397>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    167\u001b[0m     \u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mplayers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mplayer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    168\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 169\u001b[0;31m \u001b[0mnum_simul\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput_num_simul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    170\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    171\u001b[0m \u001b[0;31m# simulate games\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-66608152d397>\u001b[0m in \u001b[0;36minput_num_simul\u001b[0;34m()\u001b[0m\n\u001b[1;32m     89\u001b[0m     \u001b[0mReturns\u001b[0m \u001b[0mnum_simul\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m     \"\"\"\n\u001b[0;32m---> 91\u001b[0;31m     num_simul = int(pyip.inputNum(prompt='Enter number of simulations to run.\\nMin: 100, Max: as much as you want.   :',\n\u001b[0m\u001b[1;32m     92\u001b[0m                                   \u001b[0mmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m                                   max=None))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pyip' is not defined"
      ]
     }
    ],
@@ -165,6 +167,17 @@
     "# Create players\n",
     "players = {1: Player('Player 1'), 2: Player('Player 2'), 3: Player('Player 3'), 4: Player('Player 4')}\n",
     "\n",
+    "playing = list(players.keys())\n",
+    "\n",
+    "n = 1\n",
+    "slice = playing[:n]\n",
+    "\n",
+    "for i in range(len(playing) + 1):\n",
+    "    print(slice)\n",
+    "    n += 1\n",
+    "    slice = playing[0:n]\n",
+    "    if i == len(playing) - 1:\n",
+    "        break\n",
     "\n",
     "############ I need to rearrange everything:\n",
     "\n",
@@ -224,6 +237,38 @@
     "runtime = (end - start).seconds\n",
     "print(\"runtime: \", runtime)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 2]\n",
+      "[1, 2, 3]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "players = {1: Player('Player 1'), 2: Player('Player 2'), 3: Player('Player 3'), 4: Player('Player 4')}\n",
+    "\n",
+    "playing = list(players.keys())\n",
+    "\n",
+    "n = 1\n",
+    "slice = playing[:n]\n",
+    "\n",
+    "for i in range(len(playing) + 1):\n",
+    "    print(slice) # do something with those playing == insert 100-1000-10000 loop here\n",
+    "    n += 1\n",
+    "    slice = playing[0:n]\n",
+    "    if i == len(playing) - 1:\n",
+    "        break"
    ]
   },
   {
