--- a/Snakes_n_Ladders.ipynb
+++ b/Snakes_n_Ladders.ipynb
@@ -103,37 +103,6 @@
     "            return True\n",
     "\n",
     "\n",
-    "def input_players(): # REMOVE THIS\n",
-    "    \"\"\"\n",
-    "    Asks the user for the number of players and their names.\n",
-    "    Create the Player objects.\n",
-    "    Return a dict called players containing all players.\n",
-    "    \"\"\"\n",
-    "    num_players = int(pyip.inputChoice(['1', '2', '3', '4'], prompt=\"Enter the number of players: \"))\n",
-    "    \n",
-    "    players = {}\n",
-    "    for num in range(num_players):\n",
-    "        player_name = input(\"Enter a player's name: \")\n",
-    "        player = Player(player_name)\n",
-    "        players[num] = player\n",
-    "    \n",
-    "    return players\n",
-    "\n",
-    "\n",
-    "\n",
-    "def input_num_simul(): # REMOVE THIS\n",
-    "    \"\"\"\n",
-    "    () -> int\n",
-    "    Asks the user for the number of simulations to run.\n",
-    "    Min number: 100.\n",
-    "    Returns num_simul (int)\n",
-    "    \"\"\"\n",
-    "    num_simul = int(pyip.inputNum(prompt='Enter number of simulations to run.\\nMin: 100, Max: as much as you want.   :',\n",
-    "                                  min=100,\n",
-    "                                  max=None))\n",
-    "    return num_simul\n",
-    "\n",
-    "\n",
     "def play_game(players):\n",
     "    \"\"\"\n",
     "    (dict) -> stats\n",
@@ -165,19 +134,37 @@
     "### GAME SIMULATION STARTS HERE\n",
     "start = datetime.datetime.now()\n",
     "# Create players\n",
-    "players = {1: Player('Player 1'), 2: Player('Player 2'), 3: Player('Player 3'), 4: Player('Player 4')}\n",
+    "players_4 = {1: Player('Player 1'), 2: Player('Player 2'), 3: Player('Player 3'), 4: Player('Player 4')}\n",
+    "players_3 = {key:players[key] for key in [1, 2, 3]}\n",
+    "players_2 = {key:players[key] for key in [1, 2]}\n",
+    "player_1 = {key:players[key] for key in [1]}\n",
     "\n",
-    "playing = list(players.keys())\n",
+    "playing = [player_1, players_2, players_3, players_4]\n",
     "\n",
-    "n = 1\n",
-    "slice = playing[:n]\n",
+    "num_simul = [100, 1000, 10000]\n",
+    "results = {}\n",
     "\n",
-    "for i in range(len(playing) + 1):\n",
-    "    print(slice)\n",
-    "    n += 1\n",
-    "    slice = playing[0:n]\n",
-    "    if i == len(playing) - 1:\n",
-    "        break\n",
+    "for i in range(len(playing)):\n",
+    "    result = {}\n",
+    "    for num in num_simul:\n",
+    "        p1, p2, p3, p4, all_counts = [], [], [], [], []\n",
+    "        for n in range(num_simul[num]):\n",
+    "            player, count = play_game(playing[i])\n",
+    "            if player == 'Player 1':\n",
+    "                p1.append(count)\n",
+    "            elif player == 'Player 2':\n",
+    "                p2.append(count)\n",
+    "            elif player == 'Player 3':\n",
+    "                p3.append(count)\n",
+    "            elif player == 'Player 4':\n",
+    "                p4.append(count)\n",
+    "        all_counts.append(p1)\n",
+    "        all_counts.append(p2)\n",
+    "        all_counts.append(p3)\n",
+    "        all_counts.append(p4)\n",
+    "        result[num] = all_counts\n",
+    "        # CHECH AND CONTINUE FROM HERE\n",
+    "        \n",
     "\n",
     "############ I need to rearrange everything:\n",
     "\n",
@@ -237,38 +224,6 @@
     "runtime = (end - start).seconds\n",
     "print(\"runtime: \", runtime)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1]\n",
-      "[1, 2]\n",
-      "[1, 2, 3]\n",
-      "[1, 2, 3, 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "players = {1: Player('Player 1'), 2: Player('Player 2'), 3: Player('Player 3'), 4: Player('Player 4')}\n",
-    "\n",
-    "playing = list(players.keys())\n",
-    "\n",
-    "n = 1\n",
-    "slice = playing[:n]\n",
-    "\n",
-    "for i in range(len(playing) + 1):\n",
-    "    print(slice) # do something with those playing == insert 100-1000-10000 loop here\n",
-    "    n += 1\n",
-    "    slice = playing[0:n]\n",
-    "    if i == len(playing) - 1:\n",
-    "        break"
    ]
   },
   {
