--- a/Snakes_n_Ladders.ipynb
+++ b/Snakes_n_Ladders.ipynb
@@ -144,11 +144,13 @@
     "num_simul = [100, 1000, 10000]\n",
     "results = {}\n",
     "\n",
-    "for i in range(len(playing)):\n",
+    "### place \"slice\" here! :) X) \n",
+    "\n",
+    "for i in range(len(playing)): # esto solo repite 4 veces a lo pavote\n",
     "    result = {}\n",
     "    for num in num_simul:\n",
     "        p1, p2, p3, p4, all_counts = [], [], [], [], []\n",
-    "        for n in range(num_simul[num]):\n",
+    "        for n in range(num):\n",
     "            player, count = play_game(playing[i])\n",
     "            if player == 'Player 1':\n",
     "                p1.append(count)\n",
@@ -163,6 +165,7 @@
     "        all_counts.append(p3)\n",
     "        all_counts.append(p4)\n",
     "        result[num] = all_counts\n",
+    "    results[len(playing)] = result\n",
     "        # CHECH AND CONTINUE FROM HERE\n",
     "        \n",
     "\n",
