--- a/Snakes_n_Ladders.ipynb
+++ b/Snakes_n_Ladders.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## What is the minimun number of die rolls needed to win the game \"Snakes and Ladders\"?\n",
     "\n",
-    "To find out, let's first simulate the game."
+    "### To find out, let's simulate the game."
    ]
   },
   {
@@ -106,24 +106,40 @@
     "                board.squares[100] = players[player].name\n",
     "                break\n",
     "\n",
-    "    return players[player].name, counter"
+    "    return players[player].name, counter\n",
+    "\n",
+    "def play_simulations(players, num_of_simul):\n",
+    "    \"\"\"\n",
+    "    (dict, int) -> dict\n",
+    "    k:v -> 'Player n':[list of die roll counts]   \n",
+    "    Returns a dictionary with the result of num_of_simul simulations for players.\n",
+    "    \"\"\"\n",
+    "    results = {}\n",
+    "    \n",
+    "    for player in players:\n",
+    "        results[players[player].name] = []\n",
+    "    \n",
+    "    for n in range(num_of_simul):\n",
+    "        result = play_game(players)\n",
+    "        results[result[0]].append(result[1])\n",
+    "        # reset player's position attributes before next game\n",
+    "        for player in players:\n",
+    "            players[player].position = 0\n",
+    "            players[player].all_positions = []\n",
+    "    \n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'players' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-e9c4516b8fab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     96\u001b[0m \u001b[0;31m# Create players\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0mplayers_4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mPlayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Player 1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mPlayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Player 2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mPlayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Player 3'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mPlayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Player 4'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 98\u001b[0;31m \u001b[0mplayers_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mplayers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m \u001b[0mplayers_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mplayers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m \u001b[0mplayer_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mplayers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-1-e9c4516b8fab>\u001b[0m in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     96\u001b[0m \u001b[0;31m# Create players\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0mplayers_4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mPlayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Player 1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mPlayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Player 2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mPlayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Player 3'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mPlayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Player 4'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 98\u001b[0;31m \u001b[0mplayers_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mplayers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m \u001b[0mplayers_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mplayers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m \u001b[0mplayer_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mplayers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'players' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "runtime:  16\n"
      ]
     }
    ],
@@ -132,97 +148,51 @@
     "start = datetime.datetime.now()\n",
     "# Create players\n",
     "players_4 = {1: Player('Player 1'), 2: Player('Player 2'), 3: Player('Player 3'), 4: Player('Player 4')}\n",
-    "players_3 = {key:players[key] for key in [1, 2, 3]}\n",
-    "players_2 = {key:players[key] for key in [1, 2]}\n",
-    "player_1 = {key:players[key] for key in [1]}\n",
+    "players_3 = {key:players_4[key] for key in [1, 2, 3]}\n",
+    "players_2 = {key:players_4[key] for key in [1, 2]}\n",
+    "player_1 = {key:players_4[key] for key in [1]}\n",
     "\n",
     "playing = [player_1, players_2, players_3, players_4]\n",
     "\n",
-    "num_simul = [100, 1000, 10000]\n",
-    "results = {}\n",
+    "all_results = []\n",
     "\n",
-    "### place \"slice\" here! :) X) \n",
-    "\n",
-    "for i in range(len(playing)): # esto solo repite 4 veces a lo pavote\n",
-    "    result = {}\n",
-    "    for num in num_simul:\n",
-    "        p1, p2, p3, p4, all_counts = [], [], [], [], []\n",
-    "        for n in range(num):\n",
-    "            player, count = play_game(playing[i])\n",
-    "            if player == 'Player 1':\n",
-    "                p1.append(count)\n",
-    "            elif player == 'Player 2':\n",
-    "                p2.append(count)\n",
-    "            elif player == 'Player 3':\n",
-    "                p3.append(count)\n",
-    "            elif player == 'Player 4':\n",
-    "                p4.append(count)\n",
-    "        all_counts.append(p1)\n",
-    "        all_counts.append(p2)\n",
-    "        all_counts.append(p3)\n",
-    "        all_counts.append(p4)\n",
-    "        result[num] = all_counts\n",
-    "    results[len(playing)] = result\n",
-    "        # CHECH AND CONTINUE FROM HERE\n",
-    "        \n",
-    "\n",
-    "############ I need to rearrange everything:\n",
-    "\n",
-    "# results should be a dict like:\n",
-    "# results = {1: {100: results, 1000: results, 10000: results},\n",
-    "#            2: {100: results, 1000: results, 10000: results},\n",
-    "#            3: {100: results, 1000: results, 10000: results},\n",
-    "#            4: {100: results, 1000: results, 10000: results}}\n",
-    "# then I need a pd.DataFrame to plot and show stats\n",
-    "\n",
-    "# I need to run the code 100, 1000 and 10000 times for 1, 2, 3, and 4 players\n",
-    "    \n",
-    "# num_simul = [100, 1000, 10000]\n",
-    "# i = 0\n",
-    "\n",
-    "# for players in range(1, 5):\n",
-    "#     for n in range(num_simul[i]):\n",
-    "#         play_game(players[1]) --> modify play_game's parameter, let it be list instead of dict\n",
-    "#         results --> add results to results\n",
-    "#     i += 1 --> to move to the next item in num_simul... RETHINK THIS\n",
-    "\n",
-    "# after all this for loops (can I do a comprehension here? vectorization?), create a df with the results\n",
-    "    \n",
-    "    \n",
-    "results = {}\n",
-    "for player in players:\n",
-    "    results[players[player].name] = []\n",
-    "\n",
-    "num_simul = input_num_simul()\n",
-    "\n",
-    "# simulate games\n",
-    "for n in range(num_simul):\n",
-    "    result = play_game(players)\n",
-    "    results[result[0]].append(result[1])\n",
-    "    # reset player's position attributes before next game\n",
-    "    for player in players:\n",
-    "        players[player].position = 0\n",
-    "        players[player].all_positions = []\n",
-    "\n",
-    "t = []\n",
-    "for value in results.values():\n",
-    "    t.append(value)\n",
-    "total = []\n",
-    "for item in t:\n",
-    "    total += item\n",
-    "\n",
-    "# game stats per player:  MOVE THIS TO A DF\n",
-    "for player in players:\n",
-    "    print(\"\\n\")\n",
-    "    print(players[player].name)\n",
-    "    print(\"Min: \", min(results[players[player].name]))\n",
-    "    print(\"Median: \", statistics.median(results[players[player].name]))\n",
-    "    print(\"Max: \", max(results[players[player].name]))                                           \n",
-    "    print(\"*\" * 9)\n",
+    "for n in range(len(playing)):\n",
+    "    all_results.append(play_simulations(playing[n], 100))     \n",
+    "    all_results.append(play_simulations(playing[n], 1000))      \n",
+    "    all_results.append(play_simulations(playing[n], 10000))\n",
     "\n",
     "end = datetime.datetime.now()\n",
     "runtime = (end - start).seconds\n",
-    "print(\"runtime: \", runtime)"
+    "print(\"runtime: \", runtime, \" seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2417"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for i, l in enumerate(all_results):\n",
+    "#     print(i, '\\t', l)\n",
+    "\n",
+    "# len(all_results)  # 12\n",
+    "# 0 1 2   1 player\n",
+    "# 3 4 5   2 players\n",
+    "# 6 7 8   3 players\n",
+    "# 9 10 11 4 players\n",
+    "\n",
+    "len(all_results[11]['Player 4'])"
    ]
   },
   {
@@ -230,6 +200,13 @@
    "metadata": {},
    "source": [
     "#### Now, let's take a look at the results:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create df, etc"
    ]
   },
   {
@@ -251,14 +228,11 @@
     }
    ],
    "source": [
-    "# Plot the results  # REARRANGE PLOTS?\n",
+    "# Plot the results  FROM df!!!!!!!!!!!!!\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
     "data = [value for value in results.values()]\n",
-    "data.append(total)\n",
     "names = [key for key in results.keys()]\n",
-    "names.append(\"Total\")\n",
     "# color='black', marker='o', markersize=3,\n",
     "# legend = mlines.Line2D([], [], label='Number of simulations: {}'.format(num_simul))\n",
     "flierprops = dict(marker='o', markersize=4)\n",
@@ -273,11 +247,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As we can see, no matter how many players are playing, sometimes you can really end up trapped in this seemingly never ending game."
+   ]
   }
  ],
  "metadata": {
